--- a/XBee_Communocation_Test/Debug/makefile
+++ b/XBee_Communocation_Test/Debug/makefile
@@ -60,8 +60,8 @@ all: main-build
 main-build: XBee_Communocation_Test.elf secondary-outputs
 
 # Tool invocations
-XBee_Communocation_Test.elf XBee_Communocation_Test.map: $(OBJS) $(USER_OBJS) C:\Users\Mickg\STM32CubeIDE\workspace_1.15.0\373_final_project\XBee_Communocation_Test\STM32L4R5ZITX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "XBee_Communocation_Test.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\Mickg\STM32CubeIDE\workspace_1.15.0\373_final_project\XBee_Communocation_Test\STM32L4R5ZITX_FLASH.ld" --specs=nosys.specs -Wl,-Map="XBee_Communocation_Test.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+XBee_Communocation_Test.elf XBee_Communocation_Test.map: $(OBJS) $(USER_OBJS) C:\Users\nates\OneDrive\Documents\EECS373\polyphonic-guitar-tuner\XBee_Communocation_Test\STM32L4R5ZITX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "XBee_Communocation_Test.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\nates\OneDrive\Documents\EECS373\polyphonic-guitar-tuner\XBee_Communocation_Test\STM32L4R5ZITX_FLASH.ld" --specs=nosys.specs -Wl,-Map="XBee_Communocation_Test.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
