--- a/lab7/Debug/makefile
+++ b/lab7/Debug/makefile
@@ -60,8 +60,8 @@ all: main-build
 main-build: lab7.elf secondary-outputs
 
 # Tool invocations
-lab7.elf lab7.map: $(OBJS) $(USER_OBJS) C:\Users\Mickg\STM32CubeIDE\workspace_1.15.0\373_final_project\lab7\STM32L4R5ZITXP_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "lab7.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\Mickg\STM32CubeIDE\workspace_1.15.0\373_final_project\lab7\STM32L4R5ZITXP_FLASH.ld" --specs=nosys.specs -Wl,-Map="lab7.map" -Wl,--gc-sections -static -L../Middlewares/ST/ARM/DSP/Lib --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+lab7.elf lab7.map: $(OBJS) $(USER_OBJS) C:\Users\nates\OneDrive\Documents\EECS373\polyphonic-guitar-tuner\lab7\STM32L4R5ZITXP_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "lab7.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\nates\OneDrive\Documents\EECS373\polyphonic-guitar-tuner\lab7\STM32L4R5ZITXP_FLASH.ld" --specs=nosys.specs -Wl,-Map="lab7.map" -Wl,--gc-sections -static -L../Middlewares/ST/ARM/DSP/Lib --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
